--- a/app/javascript/styles/application_white.scss
+++ b/app/javascript/styles/application_white.scss
@@ -6,6 +6,7 @@
 
 @import 'white/reset';
 @import 'mastodon/basics';
+@import 'mastodon/modal';
 @import 'mastodon/containers';
 @import 'mastodon/lists';
 @import 'mastodon/footer';
