--- a/app/views/notification_mailer/_status.html.haml
+++ b/app/views/notification_mailer/_status.html.haml
@@ -19,7 +19,7 @@
                                 %tbody
                                   %tr
                                     %td{ align: 'left', width: 48 }
-                                      = image_tag url_to_image(status.account.avatar, host: "#{root_url}"), alt:''
+                                      = image_tag full_asset_url(status.account.avatar), alt:''
                                     %td{ align: 'left' }
                                       %bdi= display_name(status.account)
                                       = "@#{status.account.acct}"
