--- a/app/javascript/styles/white/components.scss
+++ b/app/javascript/styles/white/components.scss
@@ -4,7 +4,7 @@
 }
 
 .button {
-  background-color: lighten($ui-highlight-color, 3%);
+  background-color: lighten($ui-highlight-color, 2%);
   border: 10px none;
   border-radius: 4px;
   box-sizing: border-box;
@@ -115,12 +115,12 @@
   &:hover,
   &:active,
   &:focus {
-    color: darken($ui-base-color, 56%);
+    color: darken($ui-base-color, 43%);
     transition: color 200ms ease-out;
   }
 
   &.disabled {
-    color: darken($ui-base-color, 26%);
+    color: darken($ui-base-color, 23%);
     cursor: default;
   }
 
@@ -139,7 +139,7 @@
   }
 
   &.inverted {
-    color: darken($ui-base-color, 56%);
+    color: darken($ui-base-color, 43%);
 
     &:hover,
     &:active,
@@ -155,7 +155,7 @@
       color: $ui-highlight-color;
 
       &.disabled {
-        color: darken($ui-highlight-color, 26%);
+        color: darken($ui-highlight-color, 23%);
       }
     }
   }
@@ -174,7 +174,7 @@
 }
 
 .text-icon-button {
-  color: darken($ui-base-color, 56%);
+  color: darken($ui-base-color, 43%);
   border: none;
   background: transparent;
   cursor: pointer;
@@ -193,7 +193,7 @@
   }
 
   &.disabled {
-    color: darken($ui-base-color, 26%);
+    color: darken($ui-base-color, 23%);
     cursor: default;
   }
 
@@ -268,7 +268,7 @@
   padding: 10px;
 
   .compose-form__warning {
-    color: lighten($ui-secondary-color, 32%);
+    color: lighten($ui-secondary-color, 55%);
     margin-bottom: 15px;
     background: $ui-primary-color;
     box-shadow: 0 2px 6px rgba($base-shadow-color, 0.3);
@@ -278,7 +278,7 @@
     font-weight: 400;
 
     strong {
-      color: lighten($ui-secondary-color, 32%);
+      color: lighten($ui-secondary-color, 55%);
       font-weight: 500;
 
       @each $lang in $cjk-langs {
@@ -289,7 +289,7 @@
     }
 
     a {
-      color: lighten($ui-primary-color, 16%);
+      color: lighten($ui-primary-color, 23%);
       font-weight: 500;
       text-decoration: underline;
 
@@ -408,7 +408,7 @@
   }
 
   .autosuggest-account .display-name__account {
-    color: darken($ui-base-color, 62%);
+    color: darken($ui-base-color, 46%);
   }
 
   .compose-form__modifiers {
@@ -643,7 +643,7 @@
       text-decoration: underline;
 
       .fa {
-        color: darken($ui-base-color, 70%);
+        color: darken($ui-base-color, 50%);
       }
     }
 
@@ -658,15 +658,15 @@
     }
 
     .fa {
-      color: darken($ui-base-color, 50%);
+      color: darken($ui-base-color, 40%);
     }
   }
 
   .status__content__spoiler-link {
-    background: darken($ui-base-color, 50%);
+    background: darken($ui-base-color, 40%);
 
     &:hover {
-      background: darken($ui-base-color, 56%);
+      background: darken($ui-base-color, 43%);
       text-decoration: none;
     }
   }
@@ -705,7 +705,7 @@
     background: darken($ui-base-color, 8%);
 
     .status.status-direct {
-      background: darken($ui-base-color, 24%);
+      background: darken($ui-base-color, 22%);
 
       &.muted {
         background: transparent;
@@ -749,7 +749,7 @@
     background: darken($ui-base-color, 16%);
 
     .icon-button.disabled {
-      color: darken($ui-base-color, 32%);
+      color: darken($ui-base-color, 26%);
     }
   }
 
@@ -796,7 +796,7 @@
     background: transparent;
 
     .icon-button.disabled {
-      color: darken($ui-base-color, 26%);
+      color: darken($ui-base-color, 23%);
     }
   }
 }
@@ -940,7 +940,7 @@
   font-size: 14px;
 
   a {
-    color: darken($ui-base-color, 40%);
+    color: darken($ui-base-color, 30%);
   }
 }
 
@@ -1301,7 +1301,7 @@
     color: darken($ui-base-color, 8%);
 
     &:hover {
-      background: darken($ui-base-color, 48%);
+      background: darken($ui-base-color, 39%);
       text-decoration: none;
     }
   }
@@ -1766,7 +1766,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: darken($ui-base-color, 26%) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color($ui-base-color)}"/></svg>') no-repeat bottom / 100% auto;
+  background: darken($ui-base-color, 23%) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color($ui-base-color)}"/></svg>') no-repeat bottom / 100% auto;
   box-sizing: border-box;
   padding: 0;
   display: flex;
@@ -1787,7 +1787,7 @@
 }
 
 .pseudo-drawer {
-  background: darken($ui-base-color, 26%);
+  background: darken($ui-base-color, 23%);
   font-size: 13px;
   text-align: left;
 }
@@ -1843,7 +1843,7 @@
   &:focus,
   &:active {
     @media screen and (min-width: 631px) {
-      background: darken($ui-base-color, 28%);
+      background: darken($ui-base-color, 24%);
       transition: all 100ms linear;
     }
   }
@@ -1913,7 +1913,7 @@
   font-family: inherit;
   color: $ui-highlight-color;
   cursor: pointer;
-  flex: 0 0 auto;
+  white-space: nowrap;
   font-size: 16px;
   padding: 0 5px 0 0;
   z-index: 3;
@@ -2061,7 +2061,7 @@
   text-decoration: none;
 
   &:hover {
-    background: darken($ui-base-color, 22%);
+    background: darken($ui-base-color, 21%);
   }
 }
 
@@ -2159,7 +2159,7 @@
 
   &.light {
     color: $ui-base-color;
-    border-bottom: 2px solid darken($ui-base-color, 44%);
+    border-bottom: 2px solid darken($ui-base-color, 37%);
 
     &:focus,
     &:active {
@@ -2403,15 +2403,16 @@
   overflow: hidden;
 
   & > button {
-    display: flex;
-    flex: auto;
     margin: 0;
     border: none;
-    padding: 15px;
+    padding: 15px 0 15px 15px;
     color: inherit;
     background: transparent;
     font: inherit;
     text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &.active {
@@ -2432,7 +2433,7 @@
 .column-header__buttons {
   height: 48px;
   display: flex;
-  margin-left: 0;
+  margin-left: auto;
 }
 
 .column-header__links .text-btn {
@@ -2483,7 +2484,7 @@
     height: 0;
     background: transparent;
     border: 0;
-    border-top: 1px solid darken($ui-base-color, 24%);
+    border-top: 1px solid darken($ui-base-color, 22%);
     margin: 10px 0;
   }
 }
@@ -2512,14 +2513,6 @@
   }
 }
 
-.column-header__title {
-  display: inline-block;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  flex: 1;
-}
-
 .text-btn {
   display: inline-block;
   padding: 0;
@@ -2537,7 +2530,7 @@
 }
 
 .loading-indicator {
-  color: darken($ui-base-color, 42%);
+  color: darken($ui-base-color, 36%);
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
@@ -2566,7 +2559,7 @@
   width: 0;
   height: 0;
   box-sizing: border-box;
-  border: 0 solid darken($ui-base-color, 42%);
+  border: 0 solid darken($ui-base-color, 36%);
   border-radius: 50%;
   animation: loader-figure 1.15s infinite cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
@@ -2575,11 +2568,11 @@
   0% {
     width: 0;
     height: 0;
-    background-color: darken($ui-base-color, 42%);
+    background-color: darken($ui-base-color, 36%);
   }
 
   29% {
-    background-color: darken($ui-base-color, 42%);
+    background-color: darken($ui-base-color, 36%);
   }
 
   30% {
@@ -2762,7 +2755,7 @@
 
 .empty-column-indicator,
 .error-column {
-  color: darken($ui-base-color, 35%);
+  color: darken($ui-base-color, 30%);
   background: $ui-base-color;
   text-align: center;
   padding: 20px;
@@ -3095,7 +3088,7 @@
 
 .privacy-dropdown__option__content {
   flex: 1 1 auto;
-  color: lighten($ui-primary-color, 12%);
+  color: lighten($ui-primary-color, 14%);
 
   strong {
     font-weight: 500;
@@ -3443,7 +3436,7 @@
 
   .onboarding-modal__nav,
   .error-modal__nav {
-    color: lighten($ui-secondary-color, 8%);
+    color: lighten($ui-secondary-color, 24%);
     border: 0;
     font-size: 14px;
     font-weight: 500;
@@ -3457,7 +3450,7 @@
     &:hover,
     &:focus,
     &:active {
-      color: lighten($ui-secondary-color, 19%);
+      color: lighten($ui-secondary-color, 28%);
       background-color: lighten($ui-secondary-color, 8%);
     }
 
@@ -3499,7 +3492,7 @@
 
   &.active {
     cursor: default;
-    background: lighten($ui-secondary-color, 12%);
+    background: lighten($ui-secondary-color, 14%);
   }
 }
 
@@ -3776,7 +3769,7 @@
   & > div {
     flex: 1 1 auto;
     text-align: right;
-    color: darken($ui-base-color, 56%);
+    color: darken($ui-base-color, 43%);
     padding-right: 10px;
   }
 
@@ -3887,14 +3880,14 @@
   .confirmation-modal__cancel-button,
   .mute-modal__cancel-button {
     background-color: transparent;
-    color: lighten($ui-secondary-color, 17%);
+    color: lighten($ui-secondary-color, 24%);
     font-size: 14px;
     font-weight: 500;
 
     &:hover,
     &:focus,
     &:active {
-      color: lighten($ui-secondary-color, 19%);
+      color: lighten($ui-secondary-color, 28%);
     }
   }
 }
@@ -4709,7 +4702,7 @@ noscript {
 
   h4 {
     padding: 15px 0;
-    background: darken($ui-base-color, 26%);
+    background: darken($ui-base-color, 23%);
     font-weight: 500;
     font-size: 16px;
     text-align: center;
