Adjust theme variables

--- a/app/javascript/styles/light-grey/variables.scss
+++ b/app/javascript/styles/light-grey/variables.scss
@@ -15,9 +15,9 @@ $classic-secondary-color: #55aaaa;
 $classic-highlight-color: #6699dd;
 
 // Variables for defaults in UI
-$base-shadow-color: $black !default;
-$base-overlay-background: $black !default;
-$base-border-color: $white !default;
+$base-shadow-color: $white !default;
+$base-overlay-background: $white !default;
+$base-border-color: $black !default;
 $simple-background-color: $black !default;
 $primary-text-color: $black !default;
 $valid-value-color: $success-green !default;
