Apply background-image to about page & Adjust theme variables

--- a/app/javascript/styles/application_blue.scss
+++ b/app/javascript/styles/application_blue.scss
@@ -5,7 +5,7 @@
 @import 'fonts/montserrat';
 
 @import 'blue/reset';
-@import 'mastodon/basics';
+@import 'blue/basics';
 @import 'mastodon/containers';
 @import 'mastodon/lists';
 @import 'mastodon/footer';
@@ -18,7 +18,7 @@
 @import 'mastodon/components';
 @import 'mastodon/modal';
 @import 'mastodon/emoji_picker';
-@import 'mastodon/about';
+@import 'blue/about';
 @import 'mastodon/tables';
 @import 'mastodon/admin';
 @import 'mastodon/rtl';
