--- a/app/javascript/styles/blue/variables.scss
+++ b/app/javascript/styles/blue/variables.scss
@@ -9,10 +9,10 @@ $warning-red: #ff5050;      // Sunset Orange
 $gold-star: #ca8f04;        // Dark Goldenrod
 
 // Values from the classic Mastodon UI
-$classic-base-color: #223355;
-$classic-primary-color: #6688aa;
-$classic-secondary-color: #d0e1e8;
-$classic-highlight-color: #55aa99;
+$classic-base-color: #282d55;
+$classic-primary-color: #6c82aa;
+$classic-secondary-color: #d6dbe8;
+$classic-highlight-color: #5ba499;
 
 // Variables for defaults in UI
 $base-shadow-color: $black !default;
