--- a/app/javascript/styles/blue/variables.scss
+++ b/app/javascript/styles/blue/variables.scss
@@ -10,7 +10,7 @@ $gold-star: #ca8f04;        // Dark Goldenrod
 
 // Values from the classic Mastodon UI
 $classic-base-color: #282d55;
-$classic-primary-color: #6c82aa;
+$classic-primary-color: #8ca2ca;
 $classic-secondary-color: #d6dbe8;
 $classic-highlight-color: #5ba499;
 
