--- a/app/javascript/styles/application_blue.scss
+++ b/app/javascript/styles/application_blue.scss
@@ -19,6 +19,6 @@
 @import 'mastodon/modal';
 @import 'mastodon/emoji_picker';
 @import 'blue/about';
-@import 'mastodon/tables';
-@import 'mastodon/admin';
+@import 'blue/tables';
+@import 'blue/admin';
 @import 'mastodon/rtl';
