--- a/app/javascript/styles/blue/basics.scss
+++ b/app/javascript/styles/blue/basics.scss
@@ -35,19 +35,27 @@ body {
     height: 100%;
     padding: 0;
     background: $ui-base-color;
+    background-image: url("blue/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
   }
 
   &.about-body {
     background: darken($ui-base-color, 8%);
     background-image: url("blue/background.png");
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center top;
     padding-bottom: 0;
   }
 
   &.tag-body {
     background: darken($ui-base-color, 8%);
+    background-image: url("blue/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
     padding-bottom: 0;
   }
 
@@ -66,6 +74,10 @@ body {
 
   &.admin {
     background: darken($ui-base-color, 4%);
+    background-image: url("blue/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -77,6 +89,10 @@ body {
     text-align: center;
     color: $ui-primary-color;
     background: $ui-base-color;
+    background-image: url("blue/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
     width: 100%;
     height: 100%;
     padding: 0;
