--- a/app/javascript/styles/application_blue.scss
+++ b/app/javascript/styles/application_blue.scss
@@ -15,7 +15,7 @@
 @import 'mastodon/accounts';
 @import 'mastodon/stream_entries';
 @import 'mastodon/boost';
-@import 'mastodon/components';
+@import 'blue/components';
 @import 'mastodon/modal';
 @import 'mastodon/emoji_picker';
 @import 'blue/about';
