--- a/app/javascript/styles/application_blue.scss
+++ b/app/javascript/styles/application_blue.scss
@@ -4,8 +4,8 @@
 @import 'fonts/roboto-mono';
 @import 'fonts/montserrat';
 
-@import 'blue/reset';
-@import 'blue/basics';
+@import 'mastodon/reset';
+@import 'mastodon/basics';
 @import 'mastodon/containers';
 @import 'mastodon/lists';
 @import 'mastodon/footer';
@@ -15,10 +15,13 @@
 @import 'mastodon/accounts';
 @import 'mastodon/stream_entries';
 @import 'mastodon/boost';
-@import 'blue/components';
+@import 'mastodon/components';
 @import 'mastodon/modal';
 @import 'mastodon/emoji_picker';
-@import 'blue/about';
-@import 'blue/tables';
-@import 'blue/admin';
+@import 'mastodon/about';
+@import 'mastodon/tables';
+@import 'mastodon/admin';
 @import 'mastodon/rtl';
+
+$wallpaper: "blue/background.png";
+@import 'wallpaper';
