--- a/app/javascript/styles/application_green.scss
+++ b/app/javascript/styles/application_green.scss
@@ -4,7 +4,7 @@
 @import 'fonts/roboto-mono';
 @import 'fonts/montserrat';
 
-@import 'blue/reset';
+@import 'mastodon/reset';
 @import 'mastodon/basics';
 @import 'mastodon/containers';
 @import 'mastodon/lists';
