--- a/app/javascript/styles/dark-green/variables.scss
+++ b/app/javascript/styles/dark-green/variables.scss
@@ -12,7 +12,7 @@ $gold-star: #ca8f04;        // Dark Goldenrod
 $classic-base-color: #20372c;
 $classic-primary-color: #90c8ae;
 $classic-secondary-color: #d0e8e1;
-$classic-highlight-color: #20d990;
+$classic-highlight-color: rgba(#20d990, 0.7);
 
 // Variables for defaults in UI
 $base-shadow-color: $black !default;
@@ -25,7 +25,7 @@ $error-value-color: $error-red !default;
 
 // Tell UI to use selected colors
 $ui-base-color: $classic-base-color !default;                  // Darkest
-$ui-base-lighter-color: lighten($ui-base-color, 26%) !default; // Lighter darkest
+$ui-base-lighter-color: lighten($ui-base-color, 36%) !default; // Lighter darkest
 $ui-primary-color: $classic-primary-color !default;            // Lighter
 $ui-secondary-color: $classic-secondary-color !default;        // Lightest
 $ui-highlight-color: $classic-highlight-color !default;        // Vibrant
