--- a/app/javascript/styles/application_blue.scss
+++ b/app/javascript/styles/application_blue.scss
@@ -23,5 +23,5 @@
 @import 'mastodon/admin';
 @import 'mastodon/rtl';
 
-$wallpaper: "blue/background.png";
+$wallpaper: "blue/background.jpg";
 @import 'wallpaper';
