--- a/app/javascript/styles/application_green.scss
+++ b/app/javascript/styles/application_green.scss
@@ -22,3 +22,6 @@
 @import 'mastodon/tables';
 @import 'mastodon/admin';
 @import 'mastodon/rtl';
+
+$wallpaper: "green/background.jpg";
+@import 'wallpaper';
