--- a/app/javascript/styles/white/reset.scss
+++ b/app/javascript/styles/white/reset.scss
@@ -53,6 +53,11 @@ table {
   border-spacing: 0;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
 ::-webkit-scrollbar-thumb {
   background: darken($ui-base-color, 8%);
   border: 0px none $base-border-color;
