--- a/app/javascript/styles/white/forms.scss
+++ b/app/javascript/styles/white/forms.scss
@@ -29,24 +29,14 @@ code {
 
   span.hint {
     display: block;
-    color: $ui-primary-color;
+    color: $darker-text-color;
     font-size: 12px;
     margin-top: 4px;
   }
 
-  h4 {
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 500;
-    color: $ui-primary-color;
-    padding-bottom: 8px;
-    margin-bottom: 8px;
-    border-bottom: 1px solid darken($ui-base-color, 16%);
-  }
-
   p.hint {
     margin-bottom: 15px;
-    color: $ui-primary-color;
+    color: $darker-text-color;
 
     &.subtle-hint {
       text-align: center;
@@ -54,10 +44,10 @@ code {
       line-height: 18px;
       margin-top: 15px;
       margin-bottom: 0;
-      color: $ui-primary-color;
+      color: $darker-text-color;
 
       a {
-        color: $ui-highlight-color;
+        color: $highlight-text-color;
       }
     }
   }
@@ -254,35 +244,35 @@ code {
     }
 
     &:focus:invalid {
-      border-bottom-color: $error-value-color;
+      border-bottom-color: darken($error-red, 12%);
     }
 
     &:required:valid {
-      border-bottom-color: $valid-value-color;
+      border-bottom-color: darken($error-red, 12%);
     }
 
     &:active,
     &:focus {
-      border-bottom-color: $ui-highlight-color;
+      border-bottom-color: $highlight-text-color;
       background: rgba($base-overlay-background, 0.1);
     }
   }
 
   .input.field_with_errors {
     label {
-      color: $error-value-color;
+      color: darken($error-red, 12%);
     }
 
     input[type=text],
     input[type=email],
     input[type=password] {
-      border-bottom-color: $error-value-color;
+      border-bottom-color: darken($error-red, 12%);
     }
 
     .error {
       display: block;
       font-weight: 500;
-      color: $error-value-color;
+      color: darken($error-red, 12%);
       margin-top: 4px;
     }
   }
@@ -325,19 +315,19 @@ code {
     }
 
     &:hover {
-      background-color: darken($ui-highlight-color, 10%);
+      background-color: darken($ui-highlight-color, 5%);
     }
 
     &:active,
     &:focus {
-      background-color: lighten($ui-highlight-color, 3%);
+      background-color: lighten($ui-highlight-color, 5%);
     }
 
     &.negative {
       background: $error-value-color;
 
       &:hover {
-        background-color: darken($error-value-color, 10%);
+        background-color: darken($error-value-color, 5%);
       }
 
       &:active,
@@ -366,7 +356,7 @@ code {
       padding: 7px 4px;
       padding-bottom: 9px;
       font-size: 16px;
-      color: $ui-base-lighter-color;
+      color: $darker-text-color;
       font-family: inherit;
       pointer-events: none;
       cursor: default;
@@ -375,8 +365,8 @@ code {
 }
 
 .flash-message {
-  background: darken($ui-base-color, 16%);
-  color: $ui-primary-color;
+  background: darken($ui-base-color, 8%);
+  color: $darker-text-color;
   border-radius: 4px;
   padding: 15px 10px;
   margin-bottom: 30px;
@@ -388,7 +378,6 @@ code {
   }
 
   .oauth-code {
-    color: $ui-secondary-color;
     outline: 0;
     box-sizing: border-box;
     display: block;
@@ -397,7 +386,7 @@ code {
     padding: 10px;
     font-family: 'mastodon-font-monospace', monospace;
     background: $ui-base-color;
-    color: $ui-primary-color;
+    color: $primary-text-color;
     font-size: 14px;
     margin: 0;
 
@@ -412,7 +401,7 @@ code {
     }
 
     &:focus {
-      background: darken($ui-base-color, 8%);
+      background: darken($ui-base-color, 4%);
     }
   }
 
@@ -436,7 +425,7 @@ code {
   text-align: center;
 
   a {
-    color: $ui-primary-color;
+    color: $darker-text-color;
     text-decoration: none;
 
     &:hover {
@@ -449,7 +438,7 @@ code {
 .follow-prompt {
   margin-bottom: 30px;
   text-align: center;
-  color: $ui-primary-color;
+  color: $darker-text-color;
 
   h2 {
     font-size: 16px;
@@ -457,7 +446,7 @@ code {
   }
 
   strong {
-    color: $ui-secondary-color;
+    color: $primary-text-color;
     font-weight: 500;
 
     @each $lang in $cjk-langs {
@@ -494,7 +483,7 @@ code {
 
 .qr-alternative {
   margin-bottom: 20px;
-  color: $ui-secondary-color;
+  color: $darker-text-color;
   flex: 150px;
 
   samp {
@@ -579,7 +568,7 @@ code {
 
 .post-follow-actions {
   text-align: center;
-  color: $ui-primary-color;
+  color: $darker-text-color;
 
   div {
     margin-bottom: 4px;
@@ -592,7 +581,7 @@ code {
 
   h4 {
     font-size: 16px;
-    color: $ui-base-lighter-color;
+    color: $primary-text-color;
     text-align: center;
     margin-bottom: 20px;
     border: 0;
