Fix custom themes

--- a/app/javascript/styles/white/variables.scss
+++ b/app/javascript/styles/white/variables.scss
@@ -10,9 +10,9 @@ $gold-star: #ffa500;        // Orange
 
 // Values from the classic Mastodon UI
 $classic-base-color: #fcfcfc;
-$classic-primary-color: #d9e1e8;
-$classic-secondary-color: #9baec8;
-$classic-highlight-color: #4499e3;
+$classic-primary-color: #98b0d8;
+$classic-secondary-color: #5060aa;
+$classic-highlight-color: #44cccc;
 
 // Variables for defaults in UI
 $base-shadow-color: $white !default;
