--- a/app/javascript/styles/light-blue/variables.scss
+++ b/app/javascript/styles/light-blue/variables.scss
@@ -9,10 +9,10 @@ $warning-red: #ff5050;      // Sunset Orange
 $gold-star: #ffa500;        // Orange
 
 // Values from the classic Mastodon UI
-$classic-base-color: #ddfcfc;
-$classic-primary-color: #40c070;
-$classic-secondary-color: #33bbff;
-$classic-highlight-color: #ff99dd;
+$classic-base-color: #bbddff;
+$classic-primary-color: #3878c8;
+$classic-secondary-color: #2898a8;
+$classic-highlight-color: rgba(#f898a8, 0.7);
 
 // Variables for defaults in UI
 $base-shadow-color: $white !default;
@@ -32,10 +32,10 @@ $ui-highlight-color: $classic-highlight-color !default;
 // Variables for texts
 $primary-text-color: $black !default;
 $darker-text-color: $ui-primary-color !default;
-$dark-text-color: $ui-base-lighter-color !default;
+$dark-text-color: #777777;
 $secondary-text-color: $ui-secondary-color !default;
 $highlight-text-color: $ui-highlight-color !default;
-$action-button-color: $ui-base-lighter-color !default;
+$action-button-color: rgba($black, 0.4);
 // For texts on inverted backgrounds
 $inverted-text-color: $ui-base-color !default;
 $lighter-text-color: $ui-base-lighter-color !default;
