--- a/app/javascript/styles/wallpaper-light.scss
+++ b/app/javascript/styles/wallpaper-light.scss
@@ -171,7 +171,7 @@ body {
 
 /*** components.scss 2564行目 ***/
 
-column-header__button {
+.column-header__button {
   background: transparent;
 
   &.active {
