--- a/app/javascript/styles/application_white.scss
+++ b/app/javascript/styles/application_white.scss
@@ -22,3 +22,6 @@
 @import 'mastodon/tables';
 @import 'white/admin';
 @import 'mastodon/rtl';
+
+$wallpaper: "white/background.jpg";
+@import 'wallpaper-light';
