--- a/app/javascript/styles/wallpaper-light.scss
+++ b/app/javascript/styles/wallpaper-light.scss
@@ -201,7 +201,7 @@ body {
 .community-timeline__section-headline,
 .public-timeline__section-headline,
 .account__section-headline {
-  background: rbga(lighten($ui-base-color, 4%), 0.3);
+  background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
 /*** components.scss 5162行目 ***/
