--- a/app/javascript/styles/wallpaper.scss
+++ b/app/javascript/styles/wallpaper.scss
@@ -201,7 +201,7 @@ body {
 .community-timeline__section-headline,
 .public-timeline__section-headline,
 .account__section-headline {
-  background: rbga(darken($ui-base-color, 4%), 0.3);
+  background: rgba(darken($ui-base-color, 4%), 0.3);
 }
 
 /*** components.scss 5162行目 ***/
