--- a/app/javascript/styles/application_light-grey.scss
+++ b/app/javascript/styles/application_light-grey.scss
@@ -17,7 +17,7 @@
 @import 'mastodon/boost';
 @import 'white/components';
 @import 'mastodon/modal';
-@import 'mastodon/emoji_picker';
+@import 'white/emoji_picker';
 @import 'white/about';
 @import 'mastodon/tables';
 @import 'white/admin';
