--- a/app/javascript/styles/white/emoji_picker.scss
+++ b/app/javascript/styles/white/emoji_picker.scss
@@ -21,7 +21,7 @@
     border-bottom-width: 1px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    background: $ui-secondary-color;
+    background: lighten($ui-secondary-color, 36%);
   }
 
   &:last-child {
