Add Google reCAPTCHA theme option

--- a/app/views/about/_registration.html.haml
+++ b/app/views/about/_registration.html.haml
@@ -12,7 +12,7 @@
   .actions
     - if ENV['RECAPTCHA_ENABLED'] == 'true'
       %script(src='https://www.google.com/recaptcha/api.js' async defer)
-      .g-recaptcha{data: {:sitekey => "#{ENV['RECAPTCHA_SITE_KEY']}"}}
+      .g-recaptcha{data: {:sitekey => "#{ENV['RECAPTCHA_SITE_KEY']}", :theme => "#{ENV['RECAPTCHA_THEME']}"}}
       = f.button :button, t('auth.register'), type: :submit, class: 'button button-alternative'
     - else
       = f.button :button, t('auth.register'), type: :submit, class: 'button button-alternative'
