--- a/app/javascript/styles/wallpaper.scss
+++ b/app/javascript/styles/wallpaper.scss
@@ -454,7 +454,7 @@ button.icon-button.disabled i.fa-retweet {
 /*** https://gist.github.com/theoria24/8ac3ac0f8167b109eb0724c4563ddf6d ***/
 
 .fa-star::before {
-    background: url(https://kurage.cc/system/custom_emojis/images/000/000/359/original/kurage_orange.png);
+    background: url(https://s3-ap-northeast-1.amazonaws.com/kuragecc/custom_emojis/images/000/000/359/original/kurage_orange.png);
     background-repeat: no-repeat;
     background-size: 100%;
     filter: grayscale(100%) brightness(200%) opacity(40%);
