--- a/app/javascript/styles/chocolate/variables.scss
+++ b/app/javascript/styles/chocolate/variables.scss
@@ -3,10 +3,10 @@
 // Commonly used web colors
 $black: #000000;            // Black
 $white: #ffffff;            // White
-$success-green: #79bd9a;  !default;   // Padua
-$error-red: #df405a;  !default;       // Cerise
-$warning-red: #ff5050;  !default;     // Sunset Orange
-$gold-star: #ca8f04;  !default;       // Dark Goldenrod
+$success-green: #79bd9a !default;     // Padua
+$error-red: #df405a !default;         // Cerise
+$warning-red: #ff5050 !default;       // Sunset Orange
+$gold-star: #ca8f04 !default;         // Dark Goldenrod
 
 // Values from the classic Mastodon UI
 $classic-base-color: #372c28;
