Undelete confirming user email address, etc.

--- a/app/views/about/_links.html.haml
+++ b/app/views/about/_links.html.haml
@@ -9,6 +9,7 @@
         = link_to t('settings.back'), root_url, class: 'webapp-btn'
       - else
         = link_to t('auth.login'), new_user_session_path, class: 'webapp-btn'
+    %li= link_to t('about.about_this'), about_more_path
     %li
       = link_to 'https://joinmastodon.org/' do
         = "#{t('about.other_instances')}"
