--- a/app/views/auth/registrations/new.html.haml
+++ b/app/views/auth/registrations/new.html.haml
@@ -29,6 +29,7 @@
   %p.hint= t('auth.agreement_html', rules_path: about_more_path, terms_path: terms_path)
 
   .actions
-    = f.button :button, t('auth.register'), type: :submit
+    = render partial: 'auth/shared/recaptcha'
+    = f.button :button, t('auth.register'), type: :submit, disabled: true
 
 .form-footer= render 'auth/shared/links'
